# PE-parser

./: .gitattributes  Cargo.toml  README.md
docs/: usage.md
src/: dos_header.rs  errors.rs  export_table.rs  file_header.rs  headers.rs  import_table.rs  lib.rs  optional_header.rs  parser.rs  section_header.rs  utils.rs  view.rs
tests/: test.rs
